[package]
name = "rune-workers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ord-bitcoincore-rpc = "0.17.2"
serde = "1.0.197"
anyhow = { version = "1.0.56", features = ["backtrace"] }
log = "0.4.21"
clap = { version = "4.4.2", features = ["derive"] }
dirs = "5.0.0"